--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FAMOUSLY</title>
+    <title>FAMOUSBLOCK</title>
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="assets/css/main.min.css" />
     <link
       rel="stylesheet"
@@ -17,11 +22,13 @@
     <header class="header">
       <div class="wrapper">
         <div class="header-left">
-          <img
-            src="assets/images/logo-w.png"
-            alt="mainLogo"
-            class="logo-top-img"
-          />
+          <a href="#">
+            <img
+              src="assets/images/logo-w.png"
+              alt="mainLogo"
+              class="logo-top-img"
+            />
+          </a>
         </div>
         <div class="header-right">
           <ul class="nav pc">
@@ -61,7 +68,9 @@
             <a href="#"><img src="assets/images/medium_g-h.png" alt="" /></a>
             <a href="#"><img src="assets/images/telegram_g-h.png" alt="" /></a>
           </div>
-          <button class="common-btn">WHITE PAPER</button>
+          <button class="common-btn" onclick="location.href='whithpaper.html'">
+            WHITE PAPER
+          </button>
         </div>
         <div class="cont-right">
           <div class="img-wrap">
@@ -74,6 +83,7 @@
         </div>
       </div>
     </section>
+
     <br /><br />
     <section class="cont-container">
       <div class="title">
@@ -124,20 +134,46 @@
         </div>
       </div>
     </section>
-    <br /><br />
     <section class="cont-container bg-blue">
+      <div class="ap-cont">
+        <div class="ap-left">
+          <img src="assets/images/ap.png" alt="" class="ap-img" />
+        </div>
+        <div class="ap-right">
+          <div class="ap-cont-title">
+            <h1>FAMOUSBLOCK<br />WALLET</h1>
+          </div>
+          <div class="ap-cont-cont">
+            <h3>NFT STORE</h3>
+            <p>Experience everything about NFT at FAMOUSBLOCK WALLET.</p>
+            <button class="ap-btn">COMMING SOON</button>
+          </div>
+        </div>
+      </div>
       <br /><br />
-      <div class="title">
+      <!-- <div class="title">
         <h1 class="cont-title">TITLE</h1>
         <h3>
           다양한 내용의 블라블라 블라블라 다양한 내용이 있습니다 다양한 내용을
           넣어주세요
         </h3>
+      </div> -->
+      <div class="ap-cont bt-ap-cont">
+        <div class="ap-left">
+          <img src="assets/images/nft-img.png" alt="" class="bt-ap-img" />
+        </div>
+        <div class="ap-right">
+          <div class="ap-cont-title">
+            <h1>FAMOUSBLOCK<br />WALLET</h1>
+          </div>
+          <div class="ap-cont-cont">
+            <h3>NFT STORE</h3>
+            <p>Experience everything about NFT at FAMOUSBLOCK WALLET.</p>
+            <button class="ap-btn">COMMING SOON</button>
+          </div>
+        </div>
       </div>
       <div class="cont02-wrap">
-        <div class="cont02-left">
-          <img src="assets/images/nft-img.png" alt="" />
-        </div>
         <div class="cont02-right">
           <div class="cont02">
             <div class="cont02-img">
@@ -260,14 +296,6 @@
         <div class="footer-logo">
           <img src="assets/images/logo.png" alt="" />
         </div>
-        <nav>
-          <ul>
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
-          </ul>
-        </nav>
         <div class="sns-logo">
           <a href="#"><img src="assets/images/medium_g.png" alt="" /></a>
           <a href="#"><img src="assets/images/telegram_g.png" alt="" /></a>
