--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a href="#"><img src="assets/images/medium_g-h.png" alt="" /></a>
             <a href="#"><img src="assets/images/telegram_g-h.png" alt="" /></a>
           </div>
-          <button class="common-btn" onclick="location.href='whithpaper.html'">
+          <button class="common-btn" onclick="location.href='#'">
             WHITE PAPER
           </button>
         </div>
@@ -150,7 +150,6 @@
           </div>
         </div>
       </div>
-      <br /><br />
       <!-- <div class="title">
         <h1 class="cont-title">TITLE</h1>
         <h3>
@@ -164,7 +163,7 @@
         </div>
         <div class="ap-right">
           <div class="ap-cont-title">
-            <h1>FAMOUSBLOCK<br />WALLET</h1>
+            <h1>FAMOUSBLOCK<br />NFT</h1>
           </div>
           <div class="ap-cont-cont">
             <h3>NFT STORE</h3>
