--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
     <section class="hero">
       <div class="hero-cont">
         <div class="cont-left">
-          <h1>이곳은 제목입니다</h1>
+          <h1>Entertainment NFT store with FAMOUSBLOCK</h1>
           <div class="squar"></div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-            magni rem vel non exercitationem dolores incidunt, quasi provident,
-            eveniet fugit veniam ab atque ex sint mollitia reprehenderit
-            praesentium aspernatur reiciendis.
+            Entertainment materials (image or video files) that attract people's
+            attention, such as hits or fads around the world The purpose is to
+            purchase or sell through bidding using the "FOB token" on the
+            trading platform "Famous" (alias) issued as "NFT" (non-functional
+            token) and scheduled to be operated by the "FOB" Foundation.
           </p>
           <div class="squar"></div>
           <div class="sns-logo">
@@ -87,50 +88,116 @@
     <br /><br />
     <section class="cont-container">
       <div class="title">
-        <h1 class="cont-title">TITLE</h1>
-        <h3>
-          다양한 내용의 블라블라 블라블라 다양한 내용이 있습니다 다양한 내용을
-          넣어주세요
-        </h3>
+        <h1 class="cont-title">The Development of NFT</h1>
       </div>
       <div class="line"></div>
       <br /><br />
       <div class="cont01-wrap">
         <div class="cont01">
-          <h2>서브 제목 입니다</h2>
+          <h2>What is NFT?</h2>
           <div class="squar"></div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta at
-            illo, quisquam, ad non distinctio illum eligendi asperiores minima
-            recusandae, quas doloribus. Ullam laborum rerum consequatur natus
-            dolores cumque mollitia? Lorem ipsum dolor sit, amet consectetur
-            adipisicing elit. Quisquam laborum illum aut. Perferendis distinctio
-            quod optio consequuntur iure saepe, inventore fugiat et aspernatur
-            eos dolor facere a tempora voluptatum nihil!
+            Mostly known as NFT, "Non-Fungible Token" is a non-fungible asset
+            that is unique and cannot be split. NFT can be connected to
+            real-world objects. NFT provides the owner of the native digital
+            assets (assets only exist in or originate from the digital world)
+            with proof of ownership, which can live outside of a centralized
+            server or repository. In Economics, fungible assets refer to assets
+            such as currencies, stocks, bonds and precious metals. Fungible
+            assets are divisible and interchangeable. Assets of the same nominal
+            value and attributes can be considered the same. In this sense, they
+            are more of a symbol and assets themselves don't carry much value.
+            Non-fungible assets, such as houses, cars, furniture, artwork, data
+            assets and the vast majority of other assets, are neither divisible
+            nor interchangeable. It's rather obvious that most assets in the
+            real world are non-fungible, such as artwork, video game items and
+            IDs.
           </p>
-          <button class="common-btn">Read Me</button>
+          <!-- <button class="common-btn">Read Me</button> -->
+        </div>
+        <div class="title">
+          <h3>Fungible Tokens VS Non-Fungible Tokens</h3>
         </div>
         <div class="cont01">
-          <h2>서브 제목 입니다</h2>
+          <h2>Fungible Tokens</h2>
           <div class="squar1"></div>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
-            laborum illum aut. Perferendis distinctio quod optio consequuntur
-            iure saepe, inventore fugiat et aspernatur eos dolor facere a
-            tempora voluptatum nihil!
-          </p>
-          <button class="common-btn1">Read Me</button>
+          <ul class="cont01-ul-cont">
+            <div class="line"></div>
+            <li>
+              <i>1. Interchangeability</i>
+              <p>
+                FTs of the same type are interchangeable and their value is not
+                affected.
+              </p>
+            </li>
+            <div class="line"></div>
+            <li>
+              <i>2. Uniformity</i>
+              <p>
+                FTs of the same type share the same specification and all tokens
+                are indentical
+              </p>
+            </li>
+            <div class="line"></div>
+            <li>
+              <i>3. Divisibility</i>
+              <p>FTs can be split into smaller units of equal value.</p>
+            </li>
+            <div class="line"></div>
+            <li>
+              <i>4. Convenience</i>
+              <p>FTs are easy to split and exchange</p>
+            </li>
+            <li>
+              <div class="line"></div>
+              <i>5. ERC-20/TRC-20</i>
+              <p>
+                Standards on Ethereum protocol and TRON protocol that support
+                the launch of OMG,SNC,TRX and other tokens.
+              </p>
+            </li>
+            <div class="line"></div>
+          </ul>
+          <!-- <button class="common-btn1">Read Me</button> -->
         </div>
         <div class="cont01">
-          <h2>서브 제목 입니다</h2>
+          <h2>Non-Fungible Tokens</h2>
           <div class="squar1"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi
-            voluptates maxime ipsam nam quidem debitis repudiandae, dolor nulla
-            quod consectetur deserunt consequatur pariatur cum possimus aut
-            vitae quos assumenda ab.
-          </p>
-          <button class="common-btn1">Read Me</button>
+          <ul class="cont01-ul-cont">
+            <div class="line"></div>
+            <li>
+              <i>1. Non-Interchangeability</i>
+              <p>NFTs of the same type are not interchangeable.</p>
+            </li>
+            <div class="line"></div>
+            <li>
+              <i>2. Uniqueness</i>
+              <p>Each NFT is unique.</p>
+            </li>
+            <div class="line"></div>
+            <li>
+              <i>3. Indivisibility</i>
+              <p>NFTs are indivisible and one token serves as a basic unit.</p>
+            </li>
+            <div class="line"></div>
+            <li>
+              <i>4. Security</i>
+              <p>
+                Tokens are unique and can be used in a variety of settings, such
+                as gaming.
+              </p>
+            </li>
+            <div class="line"></div>
+            <li>
+              <i>5. ERC-721/TRC-721</i>
+              <p>
+                New protocols on Ethereum and TRON that support the launch of
+                NFT(e.g.enerypted collectibles).
+              </p>
+            </li>
+            <div class="line"></div>
+          </ul>
+          <!-- <button class="common-btn1">Read Me</button> -->
         </div>
       </div>
     </section>
@@ -301,15 +368,9 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis
-          harum doloremque, ex autem quod est vel recusandae laudantium
-          necessitatibus nulla cupiditate commodi minima perferendis expedita
-          dolor soluta quam libero quia?
-        </p>
+        <p>Entertainment NFT store with FAMOUSBLOCK</p>
         <div class="copy">
-          &copy; Suite 305, Griffith Corporate Centre P.O.Box 1510, Beachmont
-          Kingstown St. Vincent and Grenadines Expansion Network System Ltd.
+          Copyright &copy; FAMOUSEBLOCK . 2022 All Rights Reserved.
         </div>
       </div>
     </footer>
