--- a/index.html
+++ b/index.html
@@ -95,32 +95,36 @@
       <div class="cont01-wrap">
         <div class="cont01">
           <h2>What is NFT?</h2>
-          <div class="squar"></div>
+          <!-- <div class="squar"></div> -->
           <p>
             Mostly known as NFT, "Non-Fungible Token" is a non-fungible asset
             that is unique and cannot be split. NFT can be connected to
             real-world objects. NFT provides the owner of the native digital
-            assets (assets only exist in or originate from the digital world)
-            with proof of ownership, which can live outside of a centralized
-            server or repository. In Economics, fungible assets refer to assets
-            such as currencies, stocks, bonds and precious metals. Fungible
-            assets are divisible and interchangeable. Assets of the same nominal
-            value and attributes can be considered the same. In this sense, they
-            are more of a symbol and assets themselves don't carry much value.
-            Non-fungible assets, such as houses, cars, furniture, artwork, data
-            assets and the vast majority of other assets, are neither divisible
-            nor interchangeable. It's rather obvious that most assets in the
-            real world are non-fungible, such as artwork, video game items and
-            IDs.
+            assets (assets only exist in or originate from the digital world)...
+            <span class="cont01-none btn-none-block">
+              with proof of ownership, which can live outside of a centralized
+              server or repository. In Economics, fungible assets refer to
+              assets such as currencies, stocks, bonds and precious metals.
+              Fungible assets are divisible and interchangeable. Assets of the
+              same nominal value and attributes can be considered the same. In
+              this sense, they are more of a symbol and assets themselves don't
+              carry much value. Non-fungible assets, such as houses, cars,
+              furniture, artwork, data assets and the vast majority of other
+              assets, are neither divisible nor interchangeable. It's rather
+              obvious that most assets in the real world are non-fungible, such
+              as artwork, video game items and IDs.
+            </span>
           </p>
-          <!-- <button class="common-btn">Read Me</button> -->
+          <div class="btn-wrap">
+            <button class="common-btn seeMore">See more</button>
+          </div>
         </div>
         <div class="title">
           <h3>Fungible Tokens VS Non-Fungible Tokens</h3>
         </div>
         <div class="cont01">
           <h2>Fungible Tokens</h2>
-          <div class="squar1"></div>
+          <!-- <div class="squar1"></div> -->
           <ul class="cont01-ul-cont">
             <div class="line"></div>
             <li>
@@ -162,7 +166,7 @@
         </div>
         <div class="cont01">
           <h2>Non-Fungible Tokens</h2>
-          <div class="squar1"></div>
+          <!-- <div class="squar1"></div> -->
           <ul class="cont01-ul-cont">
             <div class="line"></div>
             <li>
@@ -376,5 +380,6 @@
     </footer>
 
     <script src="assets/javascript/header.js"></script>
+    <script src="assets/javascript/content.js"></script>
   </body>
 </html>
