--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>FAMOUSBLOCK</title>
     <link
       rel="shortcut icon"
@@ -32,10 +35,10 @@
         </div>
         <div class="header-right">
           <ul class="nav pc">
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
+            <li><a href="#NFT">NFT</a></li>
+            <li><a href="#WALLET">WALLET</a></li>
+            <li><a href="#TOKEN">TOKENOMICS</a></li>
+            <li><a href="#ROADMAP">ROADMAP</a></li>
           </ul>
           <div class="mobile-nav">
             <div class="burger"></div>
@@ -44,10 +47,10 @@
           </div>
           <ul class="nav-m m">
             <img src="./assets/images/logo-w.png" alt="" class="m-nav-img" />
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
+            <li><a href="#NFT">NFT</a></li>
+            <li><a href="#WALLET">WALLET</a></li>
+            <li><a href="#TOKEN">TOKENOMICS</a></li>
+            <li><a href="#ROADMAP">ROADMAP</a></li>
           </ul>
         </div>
       </div>
@@ -56,7 +59,7 @@
       <div class="hero-cont">
         <div class="cont-left">
           <h1>Entertainment NFT store with FAMOUSBLOCK</h1>
-          <div class="squar"></div>
+          <br />
           <p>
             Entertainment materials (image or video files) that attract people's
             attention, such as hits or fads around the world The purpose is to
@@ -64,12 +67,16 @@
             trading platform "Famous" (alias) issued as "NFT" (non-functional
             token) and scheduled to be operated by the "FOB" Foundation.
           </p>
-          <div class="squar"></div>
+          <br />
           <div class="sns-logo">
-            <a href="#"><img src="assets/images/medium_g-h.png" alt="" /></a>
-            <a href="#"><img src="assets/images/telegram_g-h.png" alt="" /></a>
+            <a href="https://t.me/+Y1_Ptj8M9a04MTM1" target="_blank"
+              ><img src="assets/images/telegram_g-h.png" alt=""
+            /></a>
           </div>
-          <button class="common-btn" onclick="location.href='#'">
+          <button
+            class="common-btn"
+            onclick="window.open('./assets/famousblockWhitePaper.pdf')"
+          >
             WHITE PAPER
           </button>
         </div>
@@ -85,7 +92,7 @@
       </div>
     </section>
 
-    <br /><br />
+    <br id="NFT" /><br />
     <section class="cont-container">
       <div class="title">
         <h1 class="cont-title">The Development of NFT</h1>
@@ -94,25 +101,47 @@
       <br /><br />
       <div class="cont01-wrap">
         <div class="cont01">
-          <h2>What is NFT?</h2>
-          <!-- <div class="squar"></div> -->
+          <h2>What Is an NFT?</h2>
           <p>
-            Mostly known as NFT, "Non-Fungible Token" is a non-fungible asset
-            that is unique and cannot be split. NFT can be connected to
-            real-world objects. NFT provides the owner of the native digital
-            assets (assets only exist in or originate from the digital world)...
+            An NFT is a digital asset that represents real-world objects like
+            art, music, in-game items and videos. They are bought and sold
+            online, frequently with cryptocurrency, and they are generally
+            encoded with the same underlying software as many cryptos.<br /><br />
             <span class="cont01-none btn-none-block">
-              with proof of ownership, which can live outside of a centralized
-              server or repository. In Economics, fungible assets refer to
-              assets such as currencies, stocks, bonds and precious metals.
-              Fungible assets are divisible and interchangeable. Assets of the
-              same nominal value and attributes can be considered the same. In
-              this sense, they are more of a symbol and assets themselves don't
-              carry much value. Non-fungible assets, such as houses, cars,
-              furniture, artwork, data assets and the vast majority of other
-              assets, are neither divisible nor interchangeable. It's rather
-              obvious that most assets in the real world are non-fungible, such
-              as artwork, video game items and IDs.
+              Although they’ve been around since 2014, NFTs are gaining
+              notoriety now because they are becoming an increasingly popular
+              way to buy and sell digital artwork. A staggering $174 million has
+              been spent on NFTs since November 2017.<br /><br />
+
+              NFTs are also generally one of a kind, or at least one of a very
+              limited run, and have unique identifying codes. “Essentially, NFTs
+              create digital scarcity,” says Arry Yu, chair of the Washington
+              Technology Industry Association Cascadia Blockchain Council and
+              managing director of Yellow Umbrella Ventures.<br /><br />
+
+              This stands in stark contrast to most digital creations, which are
+              almost always infinite in supply. Hypothetically, cutting off the
+              supply should raise the value of a given asset, assuming it’s in
+              demand.<br /><br />
+
+              But many NFTs, at least in these early days, have been digital
+              creations that already exist in some form elsewhere, like iconic
+              video clips from NBA games or securitized versions of digital art
+              that’s already floating around on Instagram.<br /><br />
+
+              Famous digital artist Mike Winklemann, better known as “Beeple,”
+              crafted a composite of 5,000 daily drawings to create perhaps the
+              most famous NFT of 2021, “EVERYDAYS: The First 5000 Days,” which
+              sold at Christie’s for a record-breaking $69.3 million.<br /><br />
+
+              Anyone can view the individual images—or even the entire collage
+              of images online for free. So why are people willing to spend
+              millions on something they could easily screenshot or download?<br /><br />
+
+              Because an NFT allows the buyer to own the original item. Not only
+              that, it contains built-in authentication, which serves as proof
+              of ownership. Collectors value those “digital bragging rights”
+              almost more than the item itself.<br /><br />
             </span>
           </p>
           <div class="btn-wrap">
@@ -124,7 +153,6 @@
         </div>
         <div class="cont01">
           <h2>Fungible Tokens</h2>
-          <!-- <div class="squar1"></div> -->
           <ul class="cont01-ul-cont">
             <div class="line"></div>
             <li>
@@ -162,11 +190,9 @@
             </li>
             <div class="line"></div>
           </ul>
-          <!-- <button class="common-btn1">Read Me</button> -->
         </div>
         <div class="cont01">
           <h2>Non-Fungible Tokens</h2>
-          <!-- <div class="squar1"></div> -->
           <ul class="cont01-ul-cont">
             <div class="line"></div>
             <li>
@@ -201,10 +227,12 @@
             </li>
             <div class="line"></div>
           </ul>
-          <!-- <button class="common-btn1">Read Me</button> -->
         </div>
       </div>
     </section>
+    <br id="WALLET" /><br />
+    <div class="line"></div>
+    <br /><br />
     <section class="cont-container bg-blue">
       <div class="ap-cont">
         <div class="ap-left">
@@ -221,13 +249,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="title">
-        <h1 class="cont-title">TITLE</h1>
-        <h3>
-          다양한 내용의 블라블라 블라블라 다양한 내용이 있습니다 다양한 내용을
-          넣어주세요
-        </h3>
-      </div> -->
       <div class="ap-cont bt-ap-cont">
         <div class="ap-left">
           <img src="assets/images/nft-img.png" alt="" class="bt-ap-img" />
@@ -243,119 +264,127 @@
           </div>
         </div>
       </div>
-      <div class="cont02-wrap">
-        <div class="cont02-right">
-          <div class="cont02">
-            <div class="cont02-img">
-              <img src="assets/images/logo.png" alt="" />
-            </div>
-            <div class="cont02-text">
-              <h3>text</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
-                ipsum dolor sit amet consectetur adipisicing elit.
-              </p>
-            </div>
-          </div>
-          <div class="cont02">
-            <div class="cont02-img">
-              <img src="assets/images/simbol-big.png" alt="" />
-            </div>
-            <div class="cont02-text">
-              <h3>text</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
-                ipsum dolor sit amet consectetur adipisicing elit.
-              </p>
-            </div>
-          </div>
-          <div class="cont02">
-            <div class="cont02-img">
-              <img src="assets/images/famously-cont01.png" alt="" />
-            </div>
-            <div class="cont02-text">
-              <h3>text</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
-                ipsum dolor sit amet consectetur adipisicing elit.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
-    <br /><br />
+    <br id="TOKEN" /><br />
     <section class="cont-container">
       <div class="title">
-        <h1 class="cont-title">TITLE</h1>
-        <h3>
-          다양한 내용의 블라블라 블라블라 다양한 내용이 있습니다 다양한 내용을
-          넣어주세요
-        </h3>
+        <h1 class="cont-title">FAMOUSBLOCK Initial Tokenomics</h1>
       </div>
-      <div class="line"></div>
-      <br /><br />
+      <div class="tokenomics">
+        <div class="tokenomics-cont">
+          <p>Total Supply :</p>
+          <p>1,500,000,000 FOB</p>
+        </div>
+        <div class="line"></div>
+        <div class="tokenomics-cont">
+          <p>Platform :</p>
+          <p>ERC-20</p>
+        </div>
+        <div class="line"></div>
+        <div class="tokenomics-cont">
+          <p>Token Name :</p>
+          <p>FAMOUSBLOCK</p>
+        </div>
+        <div class="line"></div>
+        <div class="tokenomics-cont">
+          <p>Token Simbol :</p>
+          <p>FOB</p>
+        </div>
+        <div class="line"></div>
+        <a
+          href="https://etherscan.io/address/0x9367bc03fffb36efdf9ea863342b20fa169ef4f7"
+          class="smart-contract"
+          target="_blank"
+          >Smart Contract Address</a
+        >
+      </div>
+      <div class="chart">
+        <div class="chart-cont">
+          <div class="chart-name">
+            <i>Development</i>
+            <p>40%</p>
+          </div>
+          <div class="chart-bg">
+            <div class="chart-percent40"></div>
+          </div>
+        </div>
+        <div class="chart-cont">
+          <div class="chart-name">
+            <i>Platform Operation Costs</i>
+            <p>30%</p>
+          </div>
+          <div class="chart-bg">
+            <div class="chart-percent30"></div>
+          </div>
+        </div>
+        <div class="chart-cont">
+          <div class="chart-name">
+            <i>Marketing expenses</i>
+            <p>20%</p>
+          </div>
+          <div class="chart-bg">
+            <div class="chart-percent20"></div>
+          </div>
+        </div>
+        <div class="chart-cont">
+          <div class="chart-name">
+            <i>Administrative expenses</i>
+            <p>10%</p>
+          </div>
+          <div class="chart-bg">
+            <div class="chart-percent10"></div>
+          </div>
+        </div>
+      </div>
       <div class="cont03-wrap">
         <div class="cont03">
-          <h2>asdasdasdasdasd</h2>
-          <div class="squar1"></div>
+          <h2>Development<br />(40%) <br /></h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum non
-            voluptas molestiae sunt aperiam, fugit nobis laudantium pariatur
-            quia recusandae blanditiis magni illum illo? Numquam excepturi
-            sapiente nesciunt voluptates corrupti?
+            The Famousblock team is scheduled to use the funds raised for the
+            platform development and maintenance, production, development team
+            and design team's labor costs.
           </p>
         </div>
         <div class="cont03">
-          <h2>asdasdasdasdasd</h2>
-          <div class="squar"></div>
+          <h2>
+            Platform Operating Costs<br />
+            (30%)
+          </h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum non
-            voluptas molestiae sunt aperiam, fugit nobis laudantium pariatur
-            quia recusandae blanditiis magni illum illo? Numquam excepturi
-            sapiente nesciunt voluptates corrupti?
+            The success or failure of the platform is not only accomplished by
+            successful platform development but also by the best platform
+            operation.
           </p>
         </div>
         <div class="cont03">
-          <h2>asdasdasdasdasd</h2>
-          <div class="squar1"></div>
+          <h2>
+            Marketing expenses<br />
+            (20%)
+          </h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum non
-            voluptas molestiae sunt aperiam, fugit nobis laudantium pariatur
-            quia recusandae blanditiis magni illum illo? Numquam excepturi
-            sapiente nesciunt voluptates corrupti?
+            To promote Famousblock globally, it will be used for public
+            relations, marketing and partner foundations and partnership
+            activities with the company.
+          </p>
+        </div>
+        <div class="cont03">
+          <h2>
+            Administrative expenses<br />
+            (10%)
+          </h2>
+          <p>
+            Famousblock will then use the legal, tax and accounting services as
+            administrative expenses.
           </p>
         </div>
       </div>
     </section>
+    <br id="ROADMAP" />
+    <div class="line"></div>
     <section class="cont-container bg-blue01">
       <div class="cont04-wrap">
-        <div class="cont04-left">
-          <div class="cont04">
-            <h2>lalalalala</h2>
-            <h3>lalalalalalala</h3>
-            <div class="squar1"></div>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo
-              accusantium aut quo qui minus? Architecto accusantium ab odio nemo
-              porro expedita nihil, quam pariatur facilis nesciunt, distinctio,
-              cumque sequi? Cupiditate!
-            </p>
-          </div>
-          <div class="cont04">
-            <h2>lalalalala</h2>
-            <h3>lalalalalalala</h3>
-            <div class="squar1"></div>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo
-              accusantium aut quo qui minus? Architecto accusantium ab odio nemo
-              porro expedita nihil, quam pariatur facilis nesciunt, distinctio,
-              cumque sequi? Cupiditate!
-            </p>
-          </div>
-        </div>
-        <div class="cont04-right">
-          <img src="assets/images/famously-cont01.png" alt="" />
+        <div class="cont04">
+          <img src="assets/images/roadmap_w.png" alt="" />
         </div>
       </div>
     </section>
@@ -367,8 +396,9 @@
           <img src="assets/images/logo.png" alt="" />
         </div>
         <div class="sns-logo">
-          <a href="#"><img src="assets/images/medium_g.png" alt="" /></a>
-          <a href="#"><img src="assets/images/telegram_g.png" alt="" /></a>
+          <a href="https://t.me/+Y1_Ptj8M9a04MTM1" target="_blank"
+            ><img src="assets/images/telegram_g.png" alt=""
+          /></a>
         </div>
       </div>
       <div class="footer-bottom">
@@ -381,5 +411,6 @@
 
     <script src="assets/javascript/header.js"></script>
     <script src="assets/javascript/content.js"></script>
+    <script src="assets/javascript/nonEvent.js"></script>
   </body>
 </html>
